--- a/Materias/materia1.html
+++ b/Materias/materia1.html
@@ -48,7 +48,9 @@
                     que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira,
                     até mesmo em momentos de crises e situações inusitadas.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -69,7 +71,7 @@
                             pagamento. </p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
