--- a/Materias/materia2.html
+++ b/Materias/materia2.html
@@ -72,7 +72,9 @@
                     devemos analisar os riscos e benefícios, dessa forma vamos ter um retorno que condiz com nossas
                     expectativas.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -93,7 +95,7 @@
                             diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia4.html" class="bloco T4">
                         <div class="imgMateria" id="M4" class="investimentosT"></div>
