--- a/Materias/materia3.html
+++ b/Materias/materia3.html
@@ -61,7 +61,9 @@
                     <li>valor dos impostos sobre o investimento</li>
                 </ol>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -82,7 +84,7 @@
                             aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
