--- a/Materias/materia4.html
+++ b/Materias/materia4.html
@@ -55,7 +55,9 @@
                     da economia como as taxas de juros, a poupança não acaba sendo um investimento com um retorno alto e
                     acaba não sendo tão significativo como outros.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -76,7 +78,7 @@
                             mãos</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
