--- a/Materias/materia5.html
+++ b/Materias/materia5.html
@@ -56,7 +56,9 @@
                     sempre ter em mente suas necessidades futuras já que a retirada desse investimento antes do prazo ou
                     em um momento inoportuno pode gerar a perda de lucro.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -77,7 +79,7 @@
                             do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
