--- a/Materias/materia6.html
+++ b/Materias/materia6.html
@@ -64,7 +64,9 @@
                 <p>Para investir na bolsa de valores é necessário ter uma conta em uma corretora de valores ou
                     instituição financeira autorizada pela CVM. Elas funcionam como intermediárias do investimento.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -85,7 +87,7 @@
                             diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
