--- a/Materias/materia8.html
+++ b/Materias/materia8.html
@@ -65,7 +65,9 @@
                     crédito para não gerar uma dívida, por isso tem que ter em mente o dia do pagamento, o juro entre as
                     parcelas e pensar bem antes de usar.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -86,7 +88,7 @@
                             guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
