--- a/Padrao.html
+++ b/Padrao.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="CSS/padrão.css">
     <link rel="stylesheet" href="CSS/Resposividade/responsividade.css">
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
-        async defer></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
     <title>Monetize-se</title>
 </head>
