--- a/Materias/materia7.html
+++ b/Materias/materia7.html
@@ -60,7 +60,9 @@
                     aumentam, as empresas geralmente repassam esses aumentos para os preços dos produtos e serviços que
                     vendem.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -81,7 +83,7 @@
                             no futuro.</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
