--- a/Materias/materia9.html
+++ b/Materias/materia9.html
@@ -52,7 +52,9 @@
                     gerações independente financeiramente e que façam escolhas que vão ser financeiramente sustentável e
                     que tanto no presente tanto quando envelhecerem vão ter uma boa qualidade de vida.</p>
             </article>
-            <aside></aside>
+            <aside>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+            </aside>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
@@ -73,7 +75,7 @@
                             diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <a href="Materias/materia5.html" class="bloco T1">
                         <div class="imgMateria" id="M5" class="economiaT"></div>
