--- a/Blog.html
+++ b/Blog.html
@@ -7,8 +7,6 @@
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/blog.css">
     <link rel="stylesheet" href="CSS/Resposividade/BlogR.css">
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
     <title>Monetize-se - Blog</title>
 </head>
 
@@ -118,7 +116,15 @@
                             necessariamente do dinheiro na hora.</p>
                     </a>
                     <aside class="asideMobile">
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
+                        <!-- Anuncios -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="1460827885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                     <a href="Materias/materia9.html" class="bloco T3">
                         <div class="imgMateria" id="M9" class="endividamentoT"></div>
@@ -172,16 +178,33 @@
                         </form>
                     </div>
                     <aside>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
+                        <!-- anunciosVertical -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                     <aside>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
                     </aside>
                     <aside>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
                     </aside>
                     <aside>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
                     </aside>
                 </div>
             </article>
