--- a/Materias/materia2.html
+++ b/Materias/materia2.html
@@ -7,8 +7,17 @@
     <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
+        async defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+        crossorigin="anonymous"></script>
+    <!-- Anuncios -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944" data-ad-slot="1460827885"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <title>Monetize-se - O que é investimentos?</title>
 </head>
 
@@ -73,7 +82,15 @@
                     expectativas.</p>
             </article>
             <aside>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                <script async
+                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                    crossorigin="anonymous"></script>
+                <!-- Anuncios -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                    data-ad-slot="1460827885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </aside>
         </section>
         <h2>Veja outras noticias</h2>
@@ -95,7 +112,15 @@
                             diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
+                        <!-- Anuncios -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="1460827885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                     <a href="Materias/materia4.html" class="bloco T4">
                         <div class="imgMateria" id="M4" class="investimentosT"></div>
