--- a/Materias/materia6.html
+++ b/Materias/materia6.html
@@ -10,7 +10,14 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
         async defer></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+        crossorigin="anonymous"></script>
+    <!-- Anuncios -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944" data-ad-slot="1460827885"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <title>Monetize-se - Bolsa de Valores</title>
 </head>
 
@@ -65,7 +72,15 @@
                     instituição financeira autorizada pela CVM. Elas funcionam como intermediárias do investimento.</p>
             </article>
             <aside>
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                <script async
+                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                    crossorigin="anonymous"></script>
+                <!-- Anuncios -->
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                    data-ad-slot="1460827885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
             </aside>
         </section>
         <h2>Veja outras noticias</h2>
@@ -87,7 +102,15 @@
                             diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
-                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
+                        <!-- Anuncios -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="1460827885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                     <a href="Materias/materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
