Add Google AdSense ads to Materias pages

--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,6 @@
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Resposividade/Responsividade.css">
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=initMap"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
     <title>Monetize-se</title>
 </head>
 
@@ -31,7 +29,9 @@
         </header>
         <section id="QuemSomosP">
             <h1>O que é a <strong>MONETIZE-SE</strong></h1>
-            <p>Monetize-se é uma plataforma de gestão e venda de produtos de informação (produtos digitais) e de produtos físicos. A Monetize-se atua como intermediária entre consumidores, afiliados e produtores, realizando pagamentos e transações totalmente online</p>
+            <p>Monetize-se é uma plataforma de gestão e venda de produtos de informação (produtos digitais) e de
+                produtos físicos. A Monetize-se atua como intermediária entre consumidores, afiliados e produtores,
+                realizando pagamentos e transações totalmente online</p>
             <div>
                 <ul>
                     <li><strong>Oferecemos</strong>
@@ -52,7 +52,10 @@
         </section>
         <section id="ServicosP">
             <h1>Nosso Serviços</h1>
-            <p>A Monetize-se disponibiliza uma seção de loja online para que a hospedagem dos produtos seja feita dentro do site. Os links de vendas podem então ser vinculados a sites e blogs, ou até mesmo postados em redes sociais ou mensageiros instantâneos.  Oferecemos os seguintes serviços, cursos, apostilas e palestras nas escolas privadas e públicas.</p>
+            <p>A Monetize-se disponibiliza uma seção de loja online para que a hospedagem dos produtos seja feita dentro
+                do site. Os links de vendas podem então ser vinculados a sites e blogs, ou até mesmo postados em redes
+                sociais ou mensageiros instantâneos. Oferecemos os seguintes serviços, cursos, apostilas e palestras nas
+                escolas privadas e públicas.</p>
             <div>
                 <figure><img src="IMG/oQueOferecemos.jpg" alt=""></figure>
                 <ul>
@@ -92,7 +95,10 @@
                 <img src="IMG/Logos/LogoComFundoAzul.png" alt="LogoDoBlog">
                 <h3>MONETIZE-SE</h3>
             </div>
-            <div id="map"></div>
+            <div id="map"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.6295195288594!2d-46.55385521807153!3d-23.68920342382299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4249ea6e1f65%3A0x328c0869bef7dea3!2sR.%20Jos%C3%A9%20Versolato%2C%20111%20-%20Centro%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP%2C%2009750-730!5e0!3m2!1spt-BR!2sbr!4v1699558659133!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             <div id="Contatos">
                 <h3>Contato</h3>
                 <img src="IMG/Icons/Predio.png" alt="IconPredio">
