--- a/Materias/materia8.html
+++ b/Materias/materia8.html
@@ -7,17 +7,6 @@
     <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
-        async defer></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
-        crossorigin="anonymous"></script>
-    <!-- Anuncios -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944" data-ad-slot="1460827885"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
     <title>Monetize-se - Crédito</title>
 </head>
 
@@ -76,9 +65,9 @@
                 <script async
                     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                     crossorigin="anonymous"></script>
-                <!-- Anuncios -->
+                <!-- anunciosVertical -->
                 <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                    data-ad-slot="1460827885" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -143,7 +132,10 @@
                 <img src="../IMG/Logos/LogoComFundoAzul.png" alt="LogoDoBlog">
                 <h3>MONETIZE-SE</h3>
             </div>
-            <div id="map"></div>
+            <div id="map"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.6295195288594!2d-46.55385521807153!3d-23.68920342382299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4249ea6e1f65%3A0x328c0869bef7dea3!2sR.%20Jos%C3%A9%20Versolato%2C%20111%20-%20Centro%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP%2C%2009750-730!5e0!3m2!1spt-BR!2sbr!4v1699558659133!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             <div id="Contatos">
                 <h3>Contato</h3>
                 <img src="../IMG/Icons/Predio.png" alt="IconPredio">
