--- a/Servicos.html
+++ b/Servicos.html
@@ -10,7 +10,8 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
         async defer></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+        crossorigin="anonymous"></script>
     <title>Monetize-se - Serviços</title>
 </head>
 
@@ -30,10 +31,14 @@
     <main>
         <section id="Servicos">
             <h1>Nosso Serviços</h1>
-            <p>todos os nossos serviços têm como princípio criar uma mentalidade objetiva sobre finanças, visando a qualidade de vida de quem consumiu os serviços e os colocou em prática, de forma correta e consciente</p>
+            <p>todos os nossos serviços têm como princípio criar uma mentalidade objetiva sobre finanças, visando a
+                qualidade de vida de quem consumiu os serviços e os colocou em prática, de forma correta e consciente
+            </p>
             <article>
                 <h2>Curso</h2>
-                <p>Curso aplicado a área de finanças, o qual contará com os seguintes conteúdos, História das finanças e perfil financeiro, Análise e controle financeiro, Gastos fixos e variáveis, Investimentos, Bolsa de valores, Planejamento, Sustentabilidade, Bancos digitais – compras online, Crédito, Tributação.</p>
+                <p>Curso aplicado a área de finanças, o qual contará com os seguintes conteúdos, História das finanças e
+                    perfil financeiro, Análise e controle financeiro, Gastos fixos e variáveis, Investimentos, Bolsa de
+                    valores, Planejamento, Sustentabilidade, Bancos digitais – compras online, Crédito, Tributação.</p>
                 <div>
                     <h3>Preço</h3>
                     <p class="Precos"><span><span class="sifrao">R$</span>280,00</span> (unitário)</p>
@@ -41,7 +46,9 @@
             </article>
             <article>
                 <h2>Palestra</h2>
-                <p>Nas palestras serão abordados alguns princípios básicos de educação financeira, para alunos no ensino médio, introduzindo esses ao mundo econômico atual e mostrando situações em que eles a utilizarão.</p>
+                <p>Nas palestras serão abordados alguns princípios básicos de educação financeira, para alunos no ensino
+                    médio, introduzindo esses ao mundo econômico atual e mostrando situações em que eles a utilizarão.
+                </p>
                 <div>
                     <h3>Preço</h3>
                     <p class="Precos"><span><span class="sifrao">R$</span>2000,00</span> (pacote escola)</p>
@@ -49,7 +56,9 @@
             </article>
             <article>
                 <h2>Oficina</h2>
-                <p>Será um curso presencial, que será ministrada por um dos nossos professores para as escolas participantes desse projeto, de forma bem didática propondo às jovens atividades em que eles desenvolverão o senso crítico em como deverão utilizar seu dinheiro.</p>
+                <p>Será um curso presencial, que será ministrada por um dos nossos professores para as escolas
+                    participantes desse projeto, de forma bem didática propondo às jovens atividades em que eles
+                    desenvolverão o senso crítico em como deverão utilizar seu dinheiro.</p>
                 <div>
                     <h3>Preço</h3>
                     <p class="Precos"><span><span class="sifrao">R$</span>4000,00</span> (pacote escola)</p>
@@ -77,7 +86,10 @@
                 <img src="IMG/Logos/LogoComFundoAzul.png" alt="LogoDoBlog">
                 <h3>MONETIZE-SE</h3>
             </div>
-            <div id="map"></div>
+            <div id="map"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.6295195288594!2d-46.55385521807153!3d-23.68920342382299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4249ea6e1f65%3A0x328c0869bef7dea3!2sR.%20Jos%C3%A9%20Versolato%2C%20111%20-%20Centro%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP%2C%2009750-730!5e0!3m2!1spt-BR!2sbr!4v1699558659133!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             <div id="Contatos">
                 <h3>Contato</h3>
                 <img src="IMG/Icons/Predio.png" alt="IconPredio">
