--- a/Padrao.html
+++ b/Padrao.html
@@ -7,9 +7,6 @@
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/padrão.css">
     <link rel="stylesheet" href="CSS/Resposividade/responsividade.css">
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
     <title>Monetize-se</title>
 </head>
 
@@ -47,7 +44,9 @@
                 <img src="IMG/Logos/LogoComFundoAzul.png" alt="LogoDoBlog">
                 <h3>MONETIZE-SE</h3>
             </div>
-            <iframe name="map" id="Tela" src="https://www.google.com/maps/@-23.6919975,-46.5486875,19z?hl=en-US&entry=ttu" frameborder="0"></iframe>
+            <iframe name="map" id="Tela"
+                src="https://www.google.com/maps/@-23.6919975,-46.5486875,19z?hl=en-US&entry=ttu"
+                frameborder="0"></iframe>
             <div id="Contatos">
                 <h3>Contato</h3>
                 <img src="IMG/Icons/Predio.png" alt="IconPredio">
