--- a/Blog.html
+++ b/Blog.html
@@ -195,16 +195,34 @@
                         <script async
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                             crossorigin="anonymous"></script>
+                        <!-- anunciosVertical -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                     <aside>
                         <script async
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                             crossorigin="anonymous"></script>
+                        <!-- anunciosVertical -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                     <aside>
                         <script async
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                             crossorigin="anonymous"></script>
+                        <!-- anunciosVertical -->
+                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
                     </aside>
                 </div>
             </article>
