Update ads in Blog.html

--- a/Blog.html
+++ b/Blog.html
@@ -181,12 +181,9 @@
                         <script async
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                             crossorigin="anonymous"></script>
-                        <script async
-                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
-                            crossorigin="anonymous"></script>
                         <!-- anunciosVertical -->
-                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <ins class="adsbygoogle" style="display:inline-block;width:250px;height:375px"
+                            data-ad-client="ca-pub-7044953387412944" data-ad-slot="2582337863"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
@@ -196,8 +193,8 @@
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                             crossorigin="anonymous"></script>
                         <!-- anunciosVertical -->
-                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <ins class="adsbygoogle" style="display:inline-block;width:250px;height:375px"
+                            data-ad-client="ca-pub-7044953387412944" data-ad-slot="2582337863"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
@@ -207,19 +204,8 @@
                             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                             crossorigin="anonymous"></script>
                         <!-- anunciosVertical -->
-                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                        <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
-                    </aside>
-                    <aside>
-                        <script async
-                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
-                            crossorigin="anonymous"></script>
-                        <!-- anunciosVertical -->
-                        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                            data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                        <ins class="adsbygoogle" style="display:inline-block;width:250px;height:375px"
+                            data-ad-client="ca-pub-7044953387412944" data-ad-slot="2582337863"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
