Fix grid gap in Blog.html and BlogR.css

--- a/Blog.html
+++ b/Blog.html
@@ -210,6 +210,17 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
+                    <aside>
+                        <script async
+                            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                            crossorigin="anonymous"></script>
+                        <!-- anunciosVertical -->
+                        <ins class="adsbygoogle" style="display:inline-block;width:250px;height:375px"
+                            data-ad-client="ca-pub-7044953387412944" data-ad-slot="2582337863"></ins>
+                        <script>
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                    </aside>
                 </div>
             </article>
         </section>
