--- a/Materias/materia1.html
+++ b/Materias/materia1.html
@@ -44,17 +44,15 @@
                     que o bom uso das ferramentas de finanças pessoais tem como resultado uma estabilidade financeira,
                     até mesmo em momentos de crises e situações inusitadas.</p>
             </article>
-            <aside>
-                <script async
-                    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
-                    crossorigin="anonymous"></script>
-                <!-- anunciosVertical -->
-                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                    data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </aside>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
+                crossorigin="anonymous"></script>
+            <!-- AnuncioVerticalResponsivo -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
+                data-ad-slot="2689346744" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </section>
         <h2>Veja outras noticias</h2>
         <section id="Materias">
