--- a/Materias/materia2.html
+++ b/Materias/materia2.html
@@ -74,9 +74,9 @@
                 <script async
                     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944"
                     crossorigin="anonymous"></script>
-                <!-- anunciosVertical -->
+                <!-- AnuncioVerticalResponsivo -->
                 <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7044953387412944"
-                    data-ad-slot="2582337863" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                    data-ad-slot="2689346744" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
